[gd_scene load_steps=15 format=3 uid="uid://kql8wfuj5tej"]

[ext_resource type="Script" path="res://scenes/world/weapon_scarecrow.gd" id="1_8h5pg"]
[ext_resource type="Texture2D" uid="uid://des60sw5pp1s2" path="res://assets/characters.png" id="2_102gw"]
[ext_resource type="Script" path="res://components/collisions/hurtbox_2d.gd" id="3_5rkx8"]
[ext_resource type="AudioStream" uid="uid://wpadsnl6s0c2" path="res://assets/audio/stick-hitting-a-dreadlock-small-thud-83297.mp3" id="4_1usri"]

[sub_resource type="Animation" id="Animation_ykj7x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EffectSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_iahpd"]
resource_name = "blank"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EffectSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_an66b"]
resource_name = "thump"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EffectSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 0.766667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [11, 17]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 0.533333, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yta0m"]
_data = {
"RESET": SubResource("Animation_ykj7x"),
"blank": SubResource("Animation_iahpd"),
"thump": SubResource("Animation_an66b")
}

[sub_resource type="Animation" id="Animation_4c550"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_1ft0p"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 5]
}

[sub_resource type="Animation" id="Animation_itbdd"]
resource_name = "thump"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [9, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s8c2l"]
_data = {
"RESET": SubResource("Animation_4c550"),
"idle": SubResource("Animation_1ft0p"),
"thump": SubResource("Animation_itbdd")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_203sm"]
radius = 41.0122

[sub_resource type="CircleShape2D" id="CircleShape2D_eydsx"]
radius = 10.0499

[node name="Area2D" type="Area2D"]
texture_filter = 1
position = Vector2(0, -18)
collision_layer = 128
collision_mask = 4
script = ExtResource("1_8h5pg")

[node name="EffectSprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 21)
texture = ExtResource("2_102gw")
hframes = 18
frame = 10

[node name="EffectAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yta0m")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2, 0)
texture = ExtResource("2_102gw")
hframes = 18

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s8c2l")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 17)
shape = SubResource("CircleShape2D_203sm")
disabled = true

[node name="Hurtbox2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4
script = ExtResource("3_5rkx8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox2D"]
shape = SubResource("CircleShape2D_eydsx")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 1.972
autostart = true

[node name="FadeTimer" type="Timer" parent="."]
autostart = true

[node name="HitAudioStream" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_1usri")
bus = &"SFX"

[node name="HitTimer" type="Timer" parent="."]
wait_time = 1.972
autostart = true

[connection signal="hurt" from="Hurtbox2D" to="." method="_on_hurtbox_2d_hurt"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="FadeTimer" to="." method="_on_fade_timer_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
